<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="njdevelop.cl.especialistacliente.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <njdevelop.cl.especialistacliente.TextViewCustom
                android:id="@+id/textviewTienda"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tienda"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/textBlue" />

            <njdevelop.cl.especialistacliente.TextViewCustom
                android:paddingLeft="5dp"
                android:id="@+id/textviewTienda2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/idTienda"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/textGris" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <njdevelop.cl.especialistacliente.TextViewCustom
                android:id="@+id/textviewTienda3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombreTienda"
                android:textAppearance="@android:style/TextAppearance.Large"
                android:textColor="@color/textGris" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">

        <njdevelop.cl.especialistacliente.TextViewCustom
            android:id="@+id/textviewTienda4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pasillo"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/textBlue" />


        <njdevelop.cl.especialistacliente.TextViewCustom
            android:id="@+id/textViewPasillo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombrePasillo"
            android:textAppearance="@android:style/TextAppearance.Large"
            android:textColor="@color/textGris" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:background="@drawable/boton"/>

        <njdevelop.cl.especialistacliente.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/infoBoton"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:textColor="@color/textBlue" />
    </LinearLayout>
</LinearLayout>
